--- a/main.css
+++ b/main.css
@@ -1,3 +1,47 @@
 body {
-    background-color: grey;
+    background-color: darkgrey;
+}
+H1 {
+    color: black;
+    font-size: 325%;
+    font-family: Arial, Verdana, serif;
+    text-align: center;
+}
+nav {
+    text-align: end;
+    font-size: 100%;
+}
+H2 {
+    font-size: 275%;
+    text-align: center;
+    color: red;
+}
+p {
+    font-size: 225%;
+    text-align: center;
+}
+h4 {
+    font-size: 225%;
+    text-align: center;
+}
+table {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 20px;
+    border-collapse: collapse;
+}
+th, td:first-child {
+    background: #AFCDE1;
+    color: black;
+    padding: 15px 30px;
+}
+th, td {
+    border-style: dotted;
+    border-width: 0 1px 1px 0;
+    border-color: black;
+}
+td {
+    background: #D8E6F3;
+}
+th:first-child, td:first-child {
+    text-align: left;
 }
