--- a/main.css
+++ b/main.css
@@ -3,56 +3,114 @@ body {
     font-family: "Raleway", sans-serif;
     font-size: 20px;
     color: #6c7376;
-    background: antiquewhite;
-    padding: 40px;
+    background: white;
+    -webkit-font-smoothing: antialiased;
 }
-nav {
-    float: right;
-    background: coral;
-    border-radius: 5px;
-    height: 100px;
-    line-height: 100px;
-    font-size: 125%;
-    margin: 0 1.5%;
+*,
+* :before,
+* :after {
+    box-sizing: border-box;
+}
+ h1,h3,h4,h5,h6 {
+     margin: 0;
+ }
+.container {
+    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+.header {
+    width: 100%;
+    height: 247px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+
+}
+.header_inner {
+    display: flex;
+    justify-content: space-between;
+    padding: 35px 0;
+    align-items: center;
+}
+.nav {
+    display: flex;
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.nav_link {
+    margin-left: 50px;
+    color: white;
+    text-decoration: none;
+    opacity: 0.75;
+    transition: opacity 0.1s linear;
+}
+.nav_link:hover {
+    opacity: 1;
+
+}
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 750px;
+    background: url("images3.jpg") center no-repeat;
+    padding-top: 247px;
+}
+.intro_inner {
+    width: 100%;
+    max-width: 1070px;
+    margin: 0 auto;
+}
+.intro_title {
+    color: black;
+    font-size: 50px;
+    line-height: 1.1;
+    font-family: Arial, Verdana, serif;
+    text-align: center;
+    font-weight: 700;
+    margin: 0;
+    text-transform: uppercase;
+    margin: 0 0 30px;
+}
+.intro_subtitle {
+    font-size: 22px;
+    color: #fff;
+    line-height: 1.5;
+    font-weight: 400;
 }
 .container-1 {
-    justify-content: space-around;
+    width: 100%;
+    max-width: 1200px;
     display: flex;
-    padding: 10px;
-    border: 1px solid silver;
+    margin: 0 auto;
 }
 .box-1 {
     flex: 1;
     order: 2;
-    margin-left: 20px;
 }
 .box-2 {
     flex: 1;
     order: 1;
-    margin-left: 20px;
 }
 .box-3 {
     flex: 1;
     order: 3;
-    margin-left: 100px;
-}
-H1 {
-    color: black;
-    font-size: 325%;
-    font-family: Arial, Verdana, serif;
-    text-align: center;
 }
 p {
+    margin: 0 0 10px;
     font-size: 225%;
     text-align: center;
 }
 caption {
-    font-size: 35px;
+    font-size: 15px;
     color: black;
 }
 tr {
     color: black;
-    text-align: center;
 }
 tr:nth-child(even) {
     background: #2b21215b;
@@ -60,10 +118,7 @@ tr:nth-child(even) {
 tr:nth-child(odd) {
     background: #830afc1b;
 }
-img {
-
-}
-h3 {
+h2 {
     background: grey;
     color: blue;
     text-align: center;
@@ -71,40 +126,40 @@ h3 {
     }
 span {
     text-decoration: underline;
-    font-size: 50%;
+    font-size: 20%;
 }
 table {
-    width: 90%;
-    height: 80%;
     border-collapse: collapse;
 }
 td {
-    padding: 5px;
+    padding: 2px;
     border: 1px solid;
 }
 .container-2 {
     width: 100%;
+    max-width: 1200px;
     display: flex;
-    padding: 15px;
-    border: 1px solid silver;
+    padding: 10px 0;
     color: black;
     font-family: Arial, Verdana, cursive;
-    font-size: 25px;
+    font-size: 20px;
+    background: white;
+    margin: 0 auto;
 }
 .box-4 {
     flex: 1;
     margin-left: 20px;
-    text-align: justify;
+    text-align: center;
 }
 .box-5 {
     flex: 1;
     margin-left: 20px;
-    text-align: justify;
+    text-align: center;
 }
 .box-6 {
     flex: 1;
     margin-left: 20px;
-    text-align: justify;
+    text-align: center;
 }
 .box-7 {
     flex: 1;
