--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ body {
      margin: 0;
  }
 .container {
+    padding: 50px;
     width: 100%;
     max-width: 1170px;
     margin: 0 auto;
@@ -49,9 +50,7 @@ body {
 }
 .nav_link:hover {
     opacity: 1;
-
 }
-
 .intro {
     display: flex;
     flex-direction: column;
@@ -71,8 +70,8 @@ body {
     line-height: 1.1;
     font-family: Arial, Verdana, serif;
     text-align: center;
+    text-shadow: 1px 1px 2px black, 0 0 1em white;
     font-weight: 700;
-    margin: 0;
     text-transform: uppercase;
     margin: 0 0 30px;
 }
@@ -82,7 +81,7 @@ body {
     line-height: 1.5;
     font-weight: 400;
 }
-.container-1 {
+.container-2 {
     width: 100%;
     max-width: 1200px;
     display: flex;
@@ -118,12 +117,7 @@ tr:nth-child(even) {
 tr:nth-child(odd) {
     background: #830afc1b;
 }
-h2 {
-    background: grey;
-    color: blue;
-    text-align: center;
-    font-size: 150%;
-    }
+
 span {
     text-decoration: underline;
     font-size: 20%;
@@ -135,34 +129,79 @@ td {
     padding: 2px;
     border: 1px solid;
 }
-.container-2 {
-    width: 100%;
-    max-width: 1200px;
-    display: flex;
-    padding: 10px 0;
+.container1 {
     color: black;
-    font-family: Arial, Verdana, cursive;
-    font-size: 20px;
-    background: white;
-    margin: 0 auto;
-}
-.box-4 {
-    flex: 1;
-    margin-left: 20px;
     text-align: center;
+    font-size: 150%;
+    padding: 20px;
 }
-.box-5 {
-    flex: 1;
-    margin-left: 20px;
+.features {
+    display: flex;
+    margin: 100px 0;
+}
+.features_box {
+    width: 25%;
     text-align: center;
+    padding: 0 10px;
 }
-.box-6 {
-    flex: 1;
-    margin-left: 20px;
+.features_icon {
+    margin-bottom: 20px;
+}
+.features_title {
+    font-size: 18px;
+    color: #2d3e33;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+.features_text {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #6c7279;
+}
+.works {
+    display: flex;
+    flex-wrap: wrap;
+}
+.works_item {
+    width: 25%;
+    height: 340px;
+    position: relative;
+    overflow: hidden;
+}
+.works_item:hover .works_content {
+    opacity: 1;
+}
+.works_photo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate3d(-50%, -50%, 0);
+}
+.works_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(232, 69, 69, .9);
     text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    opacity: 0;
+    transition: opacity .2s linear;
 }
-.box-7 {
-    flex: 1;
-    margin-left: 20px;
-    text-align: justify;
+.works_title {
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+}
+.works_text {
+    font-size: 14px;
+    color: #fff;
 }
