--- a/main.css
+++ b/main.css
@@ -15,24 +15,23 @@ body {
      margin: 0;
  }
 .container {
-    padding: 50px;
+    padding: 20px;
     width: 100%;
     max-width: 1170px;
     margin: 0 auto;
 }
 .header {
     width: 100%;
-    height: 247px;
+    height: 200px;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1000;
-
 }
 .header_inner {
     display: flex;
     justify-content: space-between;
-    padding: 35px 0;
+    padding: 20px 0;
     align-items: center;
 }
 .nav {
@@ -55,7 +54,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 750px;
+    height: 800px;
     background: url("images3.jpg") center no-repeat;
     padding-top: 247px;
 }
@@ -87,48 +86,6 @@ body {
     display: flex;
     margin: 0 auto;
 }
-.box-1 {
-    flex: 1;
-    order: 2;
-}
-.box-2 {
-    flex: 1;
-    order: 1;
-}
-.box-3 {
-    flex: 1;
-    order: 3;
-}
-p {
-    margin: 0 0 10px;
-    font-size: 225%;
-    text-align: center;
-}
-caption {
-    font-size: 15px;
-    color: black;
-}
-tr {
-    color: black;
-}
-tr:nth-child(even) {
-    background: #2b21215b;
-}
-tr:nth-child(odd) {
-    background: #830afc1b;
-}
-
-span {
-    text-decoration: underline;
-    font-size: 20%;
-}
-table {
-    border-collapse: collapse;
-}
-td {
-    padding: 2px;
-    border: 1px solid;
-}
 .container1 {
     color: black;
     text-align: center;
@@ -148,11 +105,11 @@ td {
     margin-bottom: 20px;
 }
 .features_title {
-    font-size: 18px;
+    font-size: 16px;
     color: #2d3e33;
     font-weight: 700;
     text-transform: uppercase;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 .features_text {
     font-size: 14px;
@@ -168,6 +125,7 @@ td {
     height: 340px;
     position: relative;
     overflow: hidden;
+    border-right: 1px;
 }
 .works_item:hover .works_content {
     opacity: 1;
@@ -204,4 +162,50 @@ td {
 .works_text {
     font-size: 14px;
     color: #fff;
+}
+.box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 800px;
+    background: url("img/tablework.jpg.svg") center no-repeat;
+}
+.Mode_operation {
+    padding: 50px;
+    text-align: center;
+
+}
+.job {
+    border-collapse: collapse;
+    color: black;
+    width: 400px;
+    margin: auto;
+    font-family: serif;
+}
+p {
+    margin: 0 0 10px;
+    font-size: 225%;
+    text-align: center;
+}
+td {
+    border: 1px solid;
+}
+.price {
+    text-transform: uppercase;
+    margin: 25px;
+    font-size: 25px;
+    color: black;
+    font-family: Arial, Verdana, serif;
+    font-weight: bolder;
+}
+tr:nth-child(even) {
+    background: #2b21215b;
+}
+tr:nth-child(odd) {
+    background: #830afc1b;
+}
+span {
+    text-decoration: underline;
+    font-size: 25%;
+    color: black;
 }
