--- a/style/grid.css
+++ b/style/grid.css
@@ -1,9 +1,5 @@
 .main_content {
     padding-top: 30px;
-
-}
-.container {
-
 }
 .main_row {
     display: flex;
@@ -74,4 +70,30 @@
     line-height: 1.5;
     color: black;
     font-size: 15px;
+}
+.cards-wrapper {
+    padding-top: 25px;
+}
+.row {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+}
+.card_title {
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(49, 39, 39);
+}
+.card_price {
+    text-align: center;
+}
+.footer {
+    text-align: center;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    background-color: rgb(122, 129, 141);
 }
