--- a/style/catalog.css
+++ b/style/catalog.css
@@ -56,32 +56,71 @@
     line-height: 2.14;
 }
 .header_search-dropdown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-right: 2px solid #f5f5f5;
     width: 140px;
     text-align: center;
 }
-.header_search-button {
-    height: 50px;
+.header_select {
+    position: relative;
     width: 100%;
-    text-align: center;
-}
-.header_links {
+    height: 40px;
     display: flex;
+    justify-content: center;
     align-items: center;
 }
-.header_link--notify {
-    margin-right: 15px;
-    display: flex;
-    align-items: center;
+.header_select_title {
+    width: 120px;
+    position: relative;
+    color: #b3b3b3;
+    font-size: 13px;
+    font-weight: 900;
+    line-height: 1;
+    text-transform: uppercase;
+    letter-spacing: 1.25px;
 }
-.header-link_icon {
-    width: 32px;
-    height: 32px;
-    margin-right: 21px;
+.header_select_title::after {
+    top: 3px;
+    right: 0;
+    position: absolute;
+    content: "";
+    display: block;
+    width: 8px;
+    height: 8px;
+    background-image: url(../img/background/canva-photo-editor.png);
 }
-.header-link_text {
+.header_select_dropdawn {
+    /* display: none; */
+    margin-top: 3px;
+    position: absolute;
+    border: 2px solid #f5f5f5;
+    top: 100%;
+    left: -2px;
+    right: -2px;
+    border-radius: 0 0 4px 4px;
+    background-color; white;
+}
+.header_select_dropdawn_item {
     color: #808080;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 500;
-    line-height: 2.14;
+    line-height: 2.2;
+    border-bottom: 2px solid #f5f5f5;
+}
+.header_search-button-wrapper {
+    flex-grow: 1;
+
+}
+.header_search-button {
+    background-color: transparent;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    cursor: pointer;
+
 }
