--- a/style/select.css
+++ b/style/select.css
@@ -25,7 +25,7 @@ body {
 .header_inner {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #515369;
+    border-bottom: 1px solid #dedfe7;
     padding: 35px 0;
     align-items: center;
 }
@@ -37,7 +37,7 @@ body {
 }
 .nav_link {
     margin-left: 50px;
-    color: #d36666;
+    color: #ffffff;
     text-decoration: none;
     opacity: .75;
     transition: opacity .2s linear;
@@ -52,17 +52,3 @@ body {
    height: 250px; 
    background: url("../img/background/images3.jpg") center no-repeat;
 }
-@import 'foundation';
-
-@include foundation-xy-grid-classes(
-  /* options
-  $base-grid: true,
-  $margin-grid: true,
-  $padding-grid: true,
-  $block-grid: true,
-  $collapse: true,
-  $offset: true,
-  $vertical-grid: true,
-  $frame-grid: true
-  */
-);
