--- a/style/catalog.css
+++ b/style/catalog.css
@@ -28,6 +28,7 @@
     padding-right: 25px;
     padding-top: 15px;
     padding-bottom: 40px;
+    
 }
 .header_search {
     width: 500px;
@@ -70,6 +71,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 .header_select_title {
     width: 120px;
@@ -91,7 +93,7 @@
     height: 8px;
     background-image: url(../img/background/canva-photo-editor.png);
 }
-.header_select_dropdawn {
+.header-select-dropdawn {
     /* display: none; */
     margin-top: 3px;
     position: absolute;
@@ -100,18 +102,23 @@
     left: -2px;
     right: -2px;
     border-radius: 0 0 4px 4px;
-    background-color; white;
+    background-color: white;
 }
-.header_select_dropdawn_item {
+.hidden {
+    display: none;
+}
+.header-select-dropdawn-item {
     color: #808080;
     font-size: 13px;
     font-weight: 500;
     line-height: 2.2;
     border-bottom: 2px solid #f5f5f5;
 }
+.header-select-dropdawn-item:hover {
+    background-color: #f1f1f1;
+}
 .header_search-button-wrapper {
     flex-grow: 1;
-
 }
 .header_search-button {
     background-color: transparent;
@@ -122,5 +129,4 @@
     width: 100%;
     height: 40px;
     cursor: pointer;
-
 }
