--- a/style/headerNav.css
+++ b/style/headerNav.css
@@ -3,29 +3,55 @@
 }
 .header-nav {
     width: 1110px;
+    height: 60px;
     margin: 0 auto;
-    background-color: khaki;
     border-left: 2px solid #f5f5f5;
     border-right: 2px solid #f5f5f5;
     display: flex;
-
 }
 .header-nav-categories {
-    width: 200px;
     height: 60px;
-    background-color: rgb(235, 111, 54);
     border-right: 2px solid #f5f5f5;
 }
 .header-nav-deals {
-    width: 200px;
     height: 60px;
-    background-color: rgb(7, 106, 131);
     border-right: 2px solid #f5f5f5;
-
 }
 .header-nav-select {
-    width: 200px;
-    height: 60px;
-    background-color: rgb(24, 65, 41);
-    
+   
+}
+.header-mega-menu-link {
+    padding: 0 40px 0 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+
+}
+.header-mega-menu-link-icon {
+    margin-right: 15px;
+}
+.header-mega-menu-link-text {
+    color: #424242;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 1;
+}
+.header-nav-deals {
+    border-right: 2px solid #f5f5f5;
+    padding-left: 38px;
+    padding-right: 38px;
+    display: flex;
+    align-items: center;
+    flex-grow: 1; 
+
+}
+.header-nav-link {
+    color: #7a7a7a;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 1;
+    text-decoration: none;
+    margin-right: 35px;
 }
