--- a/style/carousel.css
+++ b/style/carousel.css
@@ -35,17 +35,21 @@ h1,h3,h4,h5,h6 {
     text-align: center;
     height: 330px;
     width: 100%;
-    background: url("../img/background/images3.jpg");
-    border-radius: 6px;
+    background: 
+        linear-gradient(to top, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0)100%), 
+        url("../img/background/carousel.jpeg");
+    background-position: center;
+    background-size: cover;
+    border-radius: 6px;  
 }
 .carousel_item-title {
     color: #ffffff;
     font-size: 36px;
-    font-weight: 300;
+    font-weight: 500;
     line-height: 1;
 }
 .carousel_item-text {
-    color: rgba(255, 255, 255, 0.45);
+    color: rgb(255, 254, 254);
     font-family: Arial, Verdana, cursive;
     font-size: 16px;
     font-weight: 500;
