--- a/style/headerNav.css
+++ b/style/headerNav.css
@@ -17,9 +17,7 @@
     height: 60px;
     border-right: 2px solid #f5f5f5;
 }
-.header-nav-select {
-   
-}
+
 .header-mega-menu-link {
     padding: 0 40px 0 30px;
     display: flex;
@@ -54,4 +52,15 @@
     line-height: 1;
     text-decoration: none;
     margin-right: 35px;
+}
+.header-nav-select {
+    display: flex;
+}
+.header-nav-select-item {
+
+}
+.header_select_title {
+    align-items: center;
+    text-align: center;
+    margin: 25px;
 }
